Revise index.html for personal about me section
Updated the index.html to reflect a personal about me page with a detailed description of skills and projects.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,36 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: page
+title: About Me
 ---
+
+# Hello, I'm Gabriel 👋
+
+> **Software Engineer specializing in Backend, Distributed Systems, and High-Performance Architectures.**
+
+I am passionate about solving complex engineering problems such as **concurrency**, **resilience**, and **scalability**. My background combines academic research (B.Sc. thesis on Circuit Breakers) with practical experience delivering critical solutions for major energy sector players like Petrobras and EMAE.
+
+Currently, my focus is on architecting robust microservices using **Java (Spring Boot)**, **.NET**, and **Apache Kafka**.
+
+---
+
+### 🛠️ Core Tech Stack
+
+| Category | Technologies |
+| :--- | :--- |
+| **Backend** | Java 17+, .NET 8/9, Go |
+| **Architecture** | Microservices, EDA (Event-Driven), Clean Architecture |
+| **Data & Cache** | PostgreSQL, MongoDB, Redis |
+| **DevOps** | Docker, CI/CD (Jenkins), Linux |
+
+---
+
+### 🚀 What I Build
+
+I don't just write code; I engineer systems.
+Check out my portfolio to see real-world implementations of:
+
+* **SaaS Multi-tenancy** with secure data isolation.
+* **Payment Gateways** proofed against race conditions and network failures.
+* **Event Pipelines** built for high resilience with Kafka.
+
+[👉 View My Projects](/projects){: .btn .btn-primary }
