Update personal introduction and tech stack details

--- a/index.html
+++ b/index.html
@@ -3,34 +3,59 @@ layout: page
 title: About Me
 ---
 
-# Hello, I'm Gabriel 👋
+<h1>Hello, I'm Gabriel 👋</h1>
 
-> **Software Engineer specializing in Backend, Distributed Systems, and High-Performance Architectures.**
+<blockquote style="font-size: 1.2em; border-left: 5px solid #008AFF; padding-left: 15px; color: #555;">
+  <p><strong>Software Engineer specializing in Backend, Distributed Systems, and High-Performance Architectures.</strong></p>
+</blockquote>
 
-I am passionate about solving complex engineering problems such as **concurrency**, **resilience**, and **scalability**. My background combines academic research (B.Sc. thesis on Circuit Breakers) with practical experience delivering critical solutions for major energy sector players like Petrobras and EMAE.
+<p>I am passionate about solving complex engineering problems such as <strong>concurrency</strong>, <strong>resilience</strong>, and <strong>scalability</strong>. My background combines academic research (B.Sc. thesis on Circuit Breakers) with practical experience delivering critical solutions for major energy sector players like Petrobras and EMAE.</p>
+<p>Currently, my focus is on architecting robust microservices using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>.</p>
 
-Currently, my focus is on architecting robust microservices using **Java (Spring Boot)**, **.NET**, and **Apache Kafka**.
+<hr style="margin: 30px 0;">
 
----
+<h3>🛠️ Core Tech Stack</h3>
 
-### 🛠️ Core Tech Stack
+<table class="table table-striped" style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
+  <thead>
+    <tr style="background-color: #f8f9fa; text-align: left;">
+      <th style="padding: 12px; border-bottom: 2px solid #dee2e6;">Category</th>
+      <th style="padding: 12px; border-bottom: 2px solid #dee2e6;">Technologies</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">Backend</td>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">Java 17+, .NET 8/9, Go</td>
+    </tr>
+    <tr>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">Architecture</td>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">Microservices, EDA (Event-Driven), Clean Architecture</td>
+    </tr>
+    <tr>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">Data & Cache</td>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">PostgreSQL, MongoDB, Redis</td>
+    </tr>
+    <tr>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">DevOps</td>
+      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">Docker, CI/CD (Jenkins), Linux</td>
+    </tr>
+  </tbody>
+</table>
 
-| Category | Technologies |
-| :--- | :--- |
-| **Backend** | Java 17+, .NET 8/9, Go |
-| **Architecture** | Microservices, EDA (Event-Driven), Clean Architecture |
-| **Data & Cache** | PostgreSQL, MongoDB, Redis |
-| **DevOps** | Docker, CI/CD (Jenkins), Linux |
+<hr style="margin: 30px 0;">
 
----
+<h3>🚀 What I Build</h3>
+<p>I don't just write code; I engineer systems. Check out my portfolio to see real-world implementations of:</p>
 
-### 🚀 What I Build
+<ul>
+  <li style="margin-bottom: 10px;"><strong>SaaS Multi-tenancy</strong> with secure data isolation.</li>
+  <li style="margin-bottom: 10px;"><strong>Payment Gateways</strong> proofed against race conditions and network failures.</li>
+  <li style="margin-bottom: 20px;"><strong>Event Pipelines</strong> built for high resilience with Kafka.</li>
+</ul>
 
-I don't just write code; I engineer systems.
-Check out my portfolio to see real-world implementations of:
-
-* **SaaS Multi-tenancy** with secure data isolation.
-* **Payment Gateways** proofed against race conditions and network failures.
-* **Event Pipelines** built for high resilience with Kafka.
-
-[👉 View My Projects](/projects){: .btn .btn-primary }
+<p>
+  <a href="/projects" class="btn btn-primary btn-lg" style="background-color: #008AFF; border-color: #008AFF;">
+    👉 View My Projects
+  </a>
+</p>
