--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: About Me
 </blockquote>
 
 <p>I am passionate about solving complex engineering problems such as <strong>concurrency</strong>, <strong>resilience</strong>, and <strong>scalability</strong>. My background combines academic research (B.Sc. thesis on Circuit Breakers) with practical experience delivering critical solutions for major energy sector players like Petrobras and EMAE.</p>
-<p>Currently, my focus is on architecting robust microservices using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>.</p>
+<p>Currently, my focus is on architecting and engineering robust microservices using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>.</p>
 
 <hr style="margin: 30px 0;">
 
@@ -59,3 +59,28 @@ title: About Me
     👉 View My Projects
   </a>
 </p>
+
+<hr style="margin: 30px 0;">
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>🎯 Current Learning</h3>
+    <ul>
+      <li style="margin-bottom: 8px;"><strong>B.Sc. Thesis:</strong> Finalizing research on Circuit Breaker patterns.</li>
+      <li style="margin-bottom: 8px;"><strong>Deepening:</strong> Advanced <strong>Software Architecture</strong>, <strong>Spring Boot</strong>, and <strong>C#</strong>.</li>
+      <li style="margin-bottom: 8px;"><strong>Learning:</strong> Mastering <strong>Go (Golang)</strong> for high-concurrency systems.</li>
+    </ul>
+  </div>
+
+  <div class="col-md-6">
+    <h3>🎸 Life Outside Code</h3>
+    <p>When I'm not coding, you can find me:</p>
+    <ul>
+      <li style="margin-bottom: 8px;">Playing <strong>Acoustic Guitar</strong> or listening to music.</li>
+      <li style="margin-bottom: 8px;">Playing video games or hitting the <strong>Gym</strong>.</li>
+      <li style="margin-bottom: 8px;">Watching <strong>Football</strong> and <strong>Formula 1</strong> on weekends.</li>
+    </ul>
+  </div>
+</div>
+
+<hr style="margin: 30px 0;">
