Correct casing and formatting in hobbies list

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ title: About Me
     <h3>🎸 Life Outside Code</h3>
     <p>When I'm not coding, you can find me:</p>
     <ul>
-      <li style="margin-bottom: 8px;">Playing <strong>Acoustic Guitar</strong> or listening to music.</li>
-      <li style="margin-bottom: 8px;">Playing video games or hitting the <strong>Gym</strong>.</li>
-      <li style="margin-bottom: 8px;">Watching <strong>Football</strong> and <strong>Formula 1</strong> on weekends.</li>
+      <li style="margin-bottom: 8px;">Playing <strong>acoustic guitar</strong> or listening to music.</li>
+      <li style="margin-bottom: 8px;">Playing <strong>video games</strong> or hitting the <strong>gym</strong>.</li>
+      <li style="margin-bottom: 8px;">Watching <strong>football</strong> and <strong>F1</strong> on weekends.</li>
     </ul>
   </div>
 </div>
