Update styling and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,42 +3,53 @@ layout: page
 title: About Me
 ---
 
+<style>
+  body, p, li, td, blockquote {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+  }
+  
+  h1, h2, h3, h4 {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+    font-weight: 700;
+  }
+</style>
+
 <h1>Hello, I'm Gabriel 👋</h1>
 
-<blockquote style="font-size: 1.2em; border-left: 5px solid #008AFF; padding-left: 15px; color: #555;">
+<blockquote style="font-size: 1.2em; border-left: 5px solid #008AFF; padding-left: 15px; color: #CCCCCC; margin-top: 20px;">
   <p><strong>Software Engineer specializing in Backend, Distributed Systems, and High-Performance Architectures.</strong></p>
 </blockquote>
 
 <p>I am passionate about solving complex engineering problems such as <strong>concurrency</strong>, <strong>resilience</strong>, and <strong>scalability</strong>. My background combines academic research (B.Sc. thesis on Circuit Breakers) with practical experience delivering critical solutions for major energy sector players like Petrobras and EMAE.</p>
-<p>Currently, my focus is on architecting and engineering robust microservices using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>.</p>
+<p>Currently, my focus is on architecting robust microservices using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>.</p>
 
 <hr style="margin: 30px 0;">
 
 <h3>🛠️ Core Tech Stack</h3>
 
-<table class="table table-striped" style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
+<table style="width: 100%; border-collapse: collapse; margin-bottom: 30px; color: #E0E0E0;">
   <thead>
-    <tr style="background-color: #f8f9fa; text-align: left;">
-      <th style="padding: 12px; border-bottom: 2px solid #dee2e6;">Category</th>
-      <th style="padding: 12px; border-bottom: 2px solid #dee2e6;">Technologies</th>
+    <tr style="border-bottom: 2px solid #448AFF;">
+      <th style="padding: 15px 10px; text-align: left; font-size: 1.1em; color: #FFFFFF;">Category</th>
+      <th style="padding: 15px 10px; text-align: left; font-size: 1.1em; color: #FFFFFF;">Technologies</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">Backend</td>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">Java 17+, .NET 8/9, Go</td>
+    <tr style="border-bottom: 1px solid #333333;">
+      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">Backend</td>
+      <td style="padding: 12px 10px;">Java 17+, .NET 8/9, Go</td>
     </tr>
-    <tr>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">Architecture</td>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">Microservices, EDA (Event-Driven), Clean Architecture</td>
+    <tr style="border-bottom: 1px solid #333333;">
+      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">Architecture</td>
+      <td style="padding: 12px 10px;">Microservices, EDA (Event-Driven), Clean Architecture</td>
     </tr>
-    <tr>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">Data & Cache</td>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">PostgreSQL, MongoDB, Redis</td>
+    <tr style="border-bottom: 1px solid #333333;">
+      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">Data & Cache</td>
+      <td style="padding: 12px 10px;">PostgreSQL, MongoDB, Redis</td>
     </tr>
-    <tr>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6; font-weight: bold;">DevOps</td>
-      <td style="padding: 12px; border-bottom: 1px solid #dee2e6;">Docker, CI/CD (Jenkins), Linux</td>
+    <tr style="border-bottom: 1px solid #333333;">
+      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">DevOps</td>
+      <td style="padding: 12px 10px;">Docker, CI/CD (Jenkins), Linux</td>
     </tr>
   </tbody>
 </table>
@@ -54,17 +65,11 @@ title: About Me
   <li style="margin-bottom: 20px;"><strong>Event Pipelines</strong> built for high resilience with Kafka.</li>
 </ul>
 
-<p>
-  <a href="/projects" class="btn btn-primary btn-lg" style="background-color: #008AFF; border-color: #008AFF;">
-    👉 View My Projects
-  </a>
-</p>
-
 <hr style="margin: 30px 0;">
 
 <div class="row">
   <div class="col-md-6">
-    <h3>🎯 Current Learning</h3>
+    <h3>🎯 Current Focus (2026)</h3>
     <ul>
       <li style="margin-bottom: 8px;"><strong>B.Sc. Thesis:</strong> Finalizing research on Circuit Breaker patterns.</li>
       <li style="margin-bottom: 8px;"><strong>Deepening:</strong> Advanced <strong>Software Architecture</strong>, <strong>Spring Boot</strong>, and <strong>C#</strong>.</li>
@@ -76,11 +81,17 @@ title: About Me
     <h3>🎸 Life Outside Code</h3>
     <p>When I'm not coding, you can find me:</p>
     <ul>
-      <li style="margin-bottom: 8px;">Playing <strong>acoustic guitar</strong> or listening to music.</li>
-      <li style="margin-bottom: 8px;">Playing <strong>video games</strong> or hitting the <strong>gym</strong>.</li>
-      <li style="margin-bottom: 8px;">Watching <strong>football</strong> and <strong>F1</strong> on weekends.</li>
+      <li style="margin-bottom: 8px;">Playing <strong>Acoustic Guitar</strong> or listening to music.</li>
+      <li style="margin-bottom: 8px;">Playing video games or hitting the <strong>Gym</strong>.</li>
+      <li style="margin-bottom: 8px;">Watching <strong>Football</strong> and <strong>Formula 1</strong> on weekends.</li>
     </ul>
   </div>
 </div>
 
 <hr style="margin: 30px 0;">
+
+<p>
+  <a href="/projects" class="btn btn-primary btn-lg" style="background-color: #008AFF; border-color: #008AFF;">
+    👉 View My Projects
+  </a>
+</p>
