--- a/index.html
+++ b/index.html
@@ -3,20 +3,9 @@ layout: page
 title: About Me
 ---
 
-<style>
-  body, p, li, td, blockquote {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
-  }
-  
-  h1, h2, h3, h4 {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
-    font-weight: 700;
-  }
-</style>
-
 <h1>Hello, I'm Gabriel 👋</h1>
 
-<blockquote style="font-size: 1.2em; border-left: 5px solid #008AFF; padding-left: 15px; color: #CCCCCC; margin-top: 20px;">
+<blockquote style="font-size: 1.2em; border-left: 5px solid #008AFF; padding-left: 15px; color: #E0E0E0; margin-top: 20px;">
   <p><strong>Software Engineer specializing in Backend, Distributed Systems, and High-Performance Architectures.</strong></p>
 </blockquote>
 
