Replace table with responsive div layout for tech stack

--- a/index.html
+++ b/index.html
@@ -16,32 +16,29 @@ title: About Me
 
 <h3>🛠️ Core Tech Stack</h3>
 
-<table style="width: 100%; border-collapse: collapse; margin-bottom: 30px; color: #E0E0E0;">
-  <thead>
-    <tr style="border-bottom: 2px solid #448AFF;">
-      <th style="padding: 15px 10px; text-align: left; font-size: 1.1em; color: #FFFFFF;">Category</th>
-      <th style="padding: 15px 10px; text-align: left; font-size: 1.1em; color: #FFFFFF;">Technologies</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr style="border-bottom: 1px solid #333333;">
-      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">Backend</td>
-      <td style="padding: 12px 10px;">Java 17+, .NET 8/9, Go</td>
-    </tr>
-    <tr style="border-bottom: 1px solid #333333;">
-      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">Architecture</td>
-      <td style="padding: 12px 10px;">Microservices, EDA (Event-Driven), Clean Architecture</td>
-    </tr>
-    <tr style="border-bottom: 1px solid #333333;">
-      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">Data & Cache</td>
-      <td style="padding: 12px 10px;">PostgreSQL, MongoDB, Redis</td>
-    </tr>
-    <tr style="border-bottom: 1px solid #333333;">
-      <td style="padding: 12px 10px; font-weight: bold; color: #82B1FF;">DevOps</td>
-      <td style="padding: 12px 10px;">Docker, CI/CD (Jenkins), Linux</td>
-    </tr>
-  </tbody>
-</table>
+<div class="row" style="color: #E0E0E0;">
+  
+  <div class="col-md-6" style="margin-bottom: 25px;">
+    <h4 style="color: #82B1FF; margin-top: 0; font-weight: bold; font-size: 1.1em;">Backend</h4>
+    <p style="margin: 0;">Java 17+, .NET 8/9, Go</p>
+  </div>
+
+  <div class="col-md-6" style="margin-bottom: 25px;">
+    <h4 style="color: #82B1FF; margin-top: 0; font-weight: bold; font-size: 1.1em;">Architecture</h4>
+    <p style="margin: 0;">Microservices, EDA (Event-Driven), Clean Architecture</p>
+  </div>
+
+  <div class="col-md-6" style="margin-bottom: 25px;">
+    <h4 style="color: #82B1FF; margin-top: 0; font-weight: bold; font-size: 1.1em;">Data & Cache</h4>
+    <p style="margin: 0;">PostgreSQL, MongoDB, Redis</p>
+  </div>
+
+  <div class="col-md-6" style="margin-bottom: 25px;">
+    <h4 style="color: #82B1FF; margin-top: 0; font-weight: bold; font-size: 1.1em;">DevOps</h4>
+    <p style="margin: 0;">Docker, CI/CD (Jenkins), Linux</p>
+  </div>
+
+</div>
 
 <hr style="margin: 30px 0;">
 
