Revise introduction and hobbies section in index.html
Updated personal introduction and added a new section about technology's role in learning and connection. Revised hobbies section for consistency in capitalization.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@ title: About Me
 
 <h1>Hello, I'm Gabriel 👋</h1>
 
-<blockquote style="font-size: 1.2em; border-left: 5px solid #008AFF; padding-left: 15px; color: #E0E0E0; margin-top: 20px;">
-  <p><strong>Software Engineer specializing in Backend, Distributed Systems, and High-Performance Architectures.</strong></p>
+<blockquote style="font-size: 1.2em; border-left: 5px solid #D32F2F; padding-left: 15px; color: #E0E0E0; margin-top: 20px;">
+  <p><strong>"Technology is the ultimate enabler. My mission is to build systems that are as reliable as the opportunities they create."</strong></p>
 </blockquote>
 
-<p>I am passionate about solving complex engineering problems such as <strong>concurrency</strong>, <strong>resilience</strong>, and <strong>scalability</strong>. My background combines academic research (B.Sc. thesis on Circuit Breakers) with practical experience delivering critical solutions for major energy sector players like Petrobras and EMAE.</p>
-<p>Currently, my focus is on architecting robust microservices using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>.</p>
+<div style="color: #E0E0E0; margin-top: 20px;">
+  <p>To me, technology is a gateway to learning and connection—it’s how I expanded my own world. My purpose is to build software that facilitates life in the same way. But for technology to be truly useful, it must be trustworthy.</p>
+  
+  <p>That is why I reject the "just make it work" mindset. I am committed to <strong>best practices</strong>, <strong>maintainability</strong>, and <strong>reliability</strong>. I don't just solve tickets; I engineer resilient solutions using <strong>Java (Spring Boot)</strong>, <strong>.NET</strong>, and <strong>Apache Kafka</strong>, ensuring that what I build creates lasting value, not technical debt.</p>
+</div>
 
 <hr style="margin: 30px 0;">
 
@@ -67,9 +70,9 @@ title: About Me
     <h3>🎸 Life Outside Code</h3>
     <p>When I'm not coding, you can find me:</p>
     <ul>
-      <li style="margin-bottom: 8px;">Playing <strong>Acoustic Guitar</strong> or listening to music.</li>
-      <li style="margin-bottom: 8px;">Playing video games or hitting the <strong>Gym</strong>.</li>
-      <li style="margin-bottom: 8px;">Watching <strong>Football</strong> and <strong>Formula 1</strong> on weekends.</li>
+      <li style="margin-bottom: 8px;">Playing <strong>guitar</strong> or listening to music.</li>
+      <li style="margin-bottom: 8px;">Playing <strong>video games</strong> or hitting the <strong>gym</strong>.</li>
+      <li style="margin-bottom: 8px;">Watching <strong>football</strong> and <strong>F1</strong> on weekends.</li>
     </ul>
   </div>
 </div>
